fix: social icon more spacing (#1317)
Due to our dynamic setup I had to resort to some unwanted classname injection, but it works
Only social icons now have more spacing

WT-656 #done

--- a/packages/shared/src/styles/components/buttons.css
+++ b/packages/shared/src/styles/components/buttons.css
@@ -49,6 +49,9 @@
         margin-right: -0.5rem;
       }
     }
+    & .socialIcon {
+      margin-right: 0.75rem;
+    }
   }
 
   &.iconOnly {
